Made Template More Mobile Friendly

--- a/templates/menu.html
+++ b/templates/menu.html
@@ -16,11 +16,11 @@
         <ion-item nav-clear menu-close href="#/app/jobs">
           Jobs
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/search">
-          Search
+        <ion-item nav-clear menu-close href="#/app/profiles">
+          Profiles
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/browse">
-          Browse
+        <ion-item nav-clear menu-close href="#/app/leads">
+          Leads
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/playlists">
           Playlists
