--- a/templates/leads.html
+++ b/templates/leads.html
@@ -1,8 +1,8 @@
-<ion-view title="Browse">
+<ion-view title="Leads">
   <ion-nav-buttons side="left">
     <button menu-toggle="left"class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
   <ion-content class="has-header">
-    <h1>Browse</h1>
+    <p class="padding">This is the Leads placeholder page.</p>
   </ion-content>
 </ion-view>
