--- a/templates/profiles.html
+++ b/templates/profiles.html
@@ -1,8 +1,8 @@
-<ion-view title="Search">
+<ion-view title="Profiles">
   <ion-nav-buttons side="left">
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
   <ion-content class="has-header">
-    <h1>Search</h1>
+	<p class="padding">This is the Profiles placeholder page.</p>
   </ion-content>
 </ion-view>
