Added Basic Profile Loading

--- a/templates/menu.html
+++ b/templates/menu.html
@@ -16,7 +16,7 @@
         <ion-item nav-clear menu-close href="#/app/jobs">
           Jobs
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/profiles">
+        <ion-item nav-clear menu-close href="#/app/sections">
           Profiles
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/leads">
