--- a/templates/profiles.html
+++ b/templates/profiles.html
@@ -4,7 +4,7 @@
   </ion-nav-buttons>
   <ion-content class="has-header">
 	<ion-list>
-		<ion-item class="item-avatar" ng-repeat="profile in profiles" href="#/app/profile/{{profile.id}}">
+		<ion-item class="item-avatar item-text-wrap" ng-repeat="profile in profiles" href="#/app/profile/{{profile.id}}">
 			<img src="img/default.png" alt="Company Logo" />
 			<h2>{{profile.name}}</h2>
 			<div><small>{{profile.location}}</small></div>
