Updated some junk

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -5,7 +5,7 @@
   <ion-content class="has-header">
     <p class="padding">This is the Landing page.</p>
 	<div class="button-bar">
-		<a class="button" href="#/profiles/landing">Find<br /><small>Pros &amp; Services</small></a>
+		<a class="button" href="#/app/profiles">Find<br /><small>Pros &amp; Services</small></a>
 		<a class="button">Log In</a>
 	</div>
 	<ion-list>
