--- a/templates/profiles.html
+++ b/templates/profiles.html
@@ -4,6 +4,9 @@
   </ion-nav-buttons>
   <ion-content class="has-header">
 	<ion-list>
+		<ion-item class="item item-icon-left" style="text-align: center;">
+			<i class="icon ion-navigate"></i> {{position}}
+		</ion-item>
 		<ion-item class="item-avatar item-text-wrap" ng-repeat="profile in profiles" href="#/app/profile/{{profile.id}}">
 			<img src="img/default.png" alt="Company Logo" />
 			<h2>{{profile.name}}</h2>
