Added ability to navigate to blog posts

--- a/templates/menu.html
+++ b/templates/menu.html
@@ -22,6 +22,9 @@
         <ion-item nav-clear menu-close href="#/app/leads">
           Leads
         </ion-item>
+		<ion-item nav-clear menu-close href="#/app/blog">
+			Blog
+		</ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
