--- a/templates/landing.html
+++ b/templates/landing.html
@@ -10,10 +10,9 @@
 	</div>
 	<ion-list>
 		<ion-item class="item item-divider">ProHUB Blog</ion-item>
-		<ion-item class="item-avatar" ng-repeat="post in posts" href="#/app/posts/{{post.id}}">
-			<img src="img/default.png" alt="Company Logo" />
+		<ion-item class="item" ng-repeat="post in posts" href="#/app/blog/{{post.id}}">
 			<h2>{{post.title}}</h2>
-			<div>{{post.excerpt}}</div>
+			<div><small>Published on {{post.pubDate|date: 'fullDate'}} in {{post.category}}</small></div>
 		</ion-item>
 	</ion-list>
   </ion-content>
