--- a/templates/menu.html
+++ b/templates/menu.html
@@ -13,6 +13,9 @@
     </header>
     <ion-content class="has-header">
       <ion-list>
+        <ion-item nav-clear menu-close href="#/app/landing">
+          Home
+        </ion-item>
         <ion-item nav-clear menu-close href="#/app/jobs">
           Jobs
         </ion-item>
