--- a/templates/landing.html
+++ b/templates/landing.html
@@ -6,7 +6,7 @@
     <p class="padding">This is the Landing page.</p>
 	<div class="button-bar">
 		<a class="button" href="#/app/profiles">Find<br /><small>Pros &amp; Services</small></a>
-		<a class="button">Log In</a>
+		<a class="button" href="#/app/login">Log In</a>
 	</div>
 	<ion-list>
 		<ion-item class="item item-divider">ProHUB Blog</ion-item>
