--- a/templates/blog.html
+++ b/templates/blog.html
@@ -4,7 +4,8 @@
 	</ion-nav-buttons>
 	<ion-content class="has-header">
 		<ion-list>
-			<ion-item class="item" ng-repeat="post in posts" href="#/app/blog/{{post.id}}">
+			<ion-item class="item item-thumbnail-left" ng-repeat="post in posts" href="#/app/blog/{{post.id}}">
+				<img src="//s3.amazonaws.com/images.productionhub.com/posts/excerpts/{{post.imageName}}" alt="{{post.title}}" />
 				<h2>{{post.title}}</h2>
 				<div><small>Published on {{post.pubDate|date: 'fullDate'}} in {{post.category}}</small></div>
 			</ion-item>
