--- a/templates/blogpost.html
+++ b/templates/blogpost.html
@@ -1,4 +1,7 @@
 <ion-view title="Blog Post Details">
+	<ion-nav-buttons side="left">
+		<button menu-toggle="right" class="button button-icon icon ion-navicon"></button>
+	</ion-nav-buttons>
   <ion-content class="has-header">
     <div class="card">
 		<div class="item item-divider">
