Menu Button Experiment

--- a/templates/blogpost.html
+++ b/templates/blogpost.html
@@ -1,5 +1,5 @@
 <ion-view title="Blog Post Details">
-	<ion-nav-buttons side="left">
+	<ion-nav-buttons side="right">
 		<button menu-toggle="right" class="button button-icon icon ion-navicon"></button>
 	</ion-nav-buttons>
   <ion-content class="has-header">
