--- a/templates/menu.html
+++ b/templates/menu.html
@@ -7,7 +7,7 @@
     <ion-nav-view name="menuContent" animation="slide-left-right"></ion-nav-view>
   </ion-pane>
 
-  <ion-side-menu side="left">
+  <ion-side-menu side="right">
     <header class="bar bar-header bar-stable">
       <h1 class="title">Menu</h1>
     </header>
