Moved menu to right side

--- a/templates/profilelanding.html
+++ b/templates/profilelanding.html
@@ -1,6 +1,6 @@
 <ion-view title="ProductionHUB">
-  <ion-nav-buttons side="left">
-    <button menu-toggle="left"class="button button-icon icon ion-navicon"></button>
+  <ion-nav-buttons side="right">
+    <button menu-toggle="right" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
   <ion-content class="has-header">
     <p class="padding">This is the Profiles Landing page.</p>
