--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,6 @@
 <ion-view title="Login">
-  <ion-nav-buttons side="left">
-    <button menu-toggle="left"class="button button-icon icon ion-navicon"></button>
+  <ion-nav-buttons side="right">
+    <button menu-toggle="right" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
   <ion-content class="has-header">
 	<div>{{message}}</div>
