--- a/templates/profiles.html
+++ b/templates/profiles.html
@@ -1,6 +1,6 @@
 <ion-view title="Profiles">
-  <ion-nav-buttons side="left">
-    <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
+  <ion-nav-buttons side="right">
+    <button menu-toggle="right" class="button button-icon icon ion-navicon"></button>
 	<button class="button button-icon icon ion-navigate" ng-click="loadProfilesWithLocation()"></button>
   </ion-nav-buttons>
   <ion-content class="has-header">
