--- a/templates/singleprofile.html
+++ b/templates/singleprofile.html
@@ -1,4 +1,7 @@
 <ion-view title="Profile Details">
+  <ion-nav-buttons side="right">
+    <button menu-toggle="right" class="button button-icon icon ion-navicon"></button>
+  </ion-nav-buttons>
   <ion-content class="has-header">
     <div class="card">
 		<div class="item item-divider">
